[build-system]
requires = ["setuptools>=69"]
build-backend = "setuptools.build_meta"

[project]
name = "martian-robots"
version = "0.1.0"
description = "A command-line simulator for the Martian Robots kata."
readme = "README.md"
requires-python = ">=3.10"
dependencies = []

[project.optional-dependencies]
dev = [
    "pytest>=8.0",
]

[project.scripts]
martian-robots = "main:main"

[tool.setuptools]
py-modules = ["main"]
packages = ["src"]

[tool.pytest.ini_options]
pythonpath = ["."]
